# ha-speedport

./: .gitignore  README.md  SPEEDPORT_API_DOCUMENTATION.md  hacs.json  pyproject.toml  renovate.json  requirements_test.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: calculate_release_details.py  update_templates.py  version_manager.py
.github/workflows/: ci-orchestrator.yml  issue-orchestrator.yml  release.yml
custom_components/speedport/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  device_tracker.py  diagnostics.py  entity.py  image.py  manifest.json  sensor.py  services.yaml  strings.json  switch.py  update.py
custom_components/speedport/translations/: de.json  en.json
scripts/: generate_changelog.py
tests/: conftest.py  test_api_client.py  test_image.py  test_sensor.py  test_switch.py  test_translations.py
